# pdf-services

./: analyze_pdf_file.py  pyproject.toml
